Make sure system information is hidden by default

--- a/src/components/printable-sector/style.scss
+++ b/src/components/printable-sector/style.scss
@@ -7,6 +7,7 @@
 }
 
 .PrintableSector-SystemsContainer {
+  display: none;
   padding: 2rem 0;
 }
 
@@ -43,7 +44,8 @@
 }
 
 @media print {
-  .PrintableSector-Container {
-    display: block;
+  .PrintableSector-Container,
+  .PrintableSector-SystemsContainer {
+    display: inherit;
   }
 }
